fix: ainda em testes, mas agr quando clica mostra todos os serviços, sem precisar dos overflows

--- a/style.css
+++ b/style.css
@@ -119,18 +119,24 @@ a {
     margin: 20px 0;
 }
 
+.servico img{
+    cursor: pointer;
+}
+
 .titulo-servico {
     margin: 10px 0;
 }
 
 .container-itens-servicos {
     display: flex;
-    width: 970px;
+    flex-wrap: wrap;
     padding: 5px;
     align-items: center;
+    justify-content: space-around;
     height: 250px;
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
+    margin: 0 auto;
 }
 
 .container-itens-servicos::-webkit-scrollbar{
@@ -138,31 +144,32 @@ a {
 }
 
 .itens-servicos {
-    height: 180px;
-    width: 180px;
-    margin: 0 10px;
+    height: 200px;
+    width: 200px;
+    margin: 20px;
     transition: 0.4s all;
     border-radius: 5px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
+.itens-servicos img{
+    width: 100%;
+}
 
 .itens-servicos:hover {
-    transform: scale(115%);
-    margin: 0 10px;
+    transform: scale(110%);
+    margin: 0 20px;
     transition: 0.4s all;
 }
 
 .itens-servicos:hover .img2 {
-    width: 180px;
-    height: 180px;
     opacity: 1;
-    transform: translateY(-184px);
+    transform: translateY(-204px);
     transition: 0.4s;
 }
 
 .img2 {
-    width: 180px;
-    height: 180px;
+    width: 100%;
+    height: 100%;
     display: flex;
     border-radius: 5px;
     transition: 0.4s;
